# Comfy-Gimpy-Node-Pack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNOTES.md  FUTURE_ROADMAP.md  PHASE30_COMPLETE_HANDOFF.md  PHASE_10_HANDOFF.md  PHASE_12_HANDOFF.md  PHASE_13_HANDOFF.md  PHASE_14_HANDOFF.md  PHASE_15_HANDOFF.md  PHASE_16_HANDOFF.md  PHASE_17_HANDOFF.md  PHASE_18_HANDOFF.md  PHASE_19_HANDOFF.md  PHASE_1_HANDOFF.md  PHASE_20_HANDOFF.md  PHASE_21_HANDOFF.md  PHASE_2_HANDOFF.md  PHASE_3_HANDOFF.md  PHASE_4_HANDOFF.md  PHASE_5_HANDOFF.md  PHASE_6_HANDOFF.md  PHASE_8_HANDOFF.md  PHASE_9_HANDOFF.md  PHASE_9_README.md  README.md  SECURITY.md  WORKFLOW_AUTO_README.md  __init__.py  ai_config.json  bootstrap.py  comfy gimpy node pack.txt  comfy_nodes.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync_manager.py  (+14 more)
advanced_ai/: __init__.py  analytics_system.py  intelligent_automation.py  multi_modal_generator.py  performance_optimizer.py  rest_api_system.py  style_transfer_engine.py  webhook_system.py
ai_creative_director/: __init__.py  creative_assistant.py  feedback_integrator.py  reasoning_engine.py  session_manager.py  style_analyzer.py  workflow_optimizer.py
ai_integration/: __init__.py  context_analyzer.py  creative_memory.py  model_manager.py  prompt_engineer.py
brand_kits/: test_brand.json  test_kit.json
collaborative_studio/: __init__.py
gimp_comfy_bridge/: PHASE_11_HANDOFF.md  README.md  __init__.py  install.py  task_bridge.py  test_gimp_plugin.py  test_gimp_plugin_simple.py  validate_phase11.py
(+205 files in other folders)
