[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comfy-gimpy-studio"
version = "1.0.0"
description = "GIMP-ComfyUI bridge: send GIMP image operations through ComfyUI workflows"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "websockets>=11.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
redis = ["redis>=4.5.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "test_*", "*.tests", "cache*", "brand_kits*", "previews*", "__pycache__*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]
